feat: 增强用户管理机制
